# rusty_particles

./: .gitignore  .readthedocs.yaml  API_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PHYSICS.md
pydem/: example.py  example_mpi.py  test_analytical.py  test_analytical_rotation.py  test_gpu.py  test_jkr.py  test_models.py  test_multithreading.py  test_periodic.py  test_simple.py  test_sjkr.py
src/: contact.rs  gpu.rs  grid.rs  lib.rs  main.rs  material.rs  mesh.rs  particle.rs  physics.rs  simulation.rs  vtk.rs
src/shaders/: physics.wgsl
