[package]
name = "rusty_particles"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.24", features = ["scalar-math"] }
rayon = "1.8"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
fastrand = "2.0"
stl_io = "0.7"
pyo3 = { version = "0.20", features = ["extension-module"] }

[lib]
name = "rusty_particles"
crate-type = ["cdylib", "rlib"]
